--- a/WaterTracker/Resources/Base.lproj/Main.storyboard
+++ b/WaterTracker/Resources/Base.lproj/Main.storyboard
@@ -40,23 +40,6 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YL1-AL-rxW">
-                                <rect key="frame" x="147.66666666666666" y="688" width="107" height="107"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="107" id="3KQ-8W-ss6"/>
-                                    <constraint firstAttribute="width" constant="107" id="qYi-OV-y4V"/>
-                                </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="" cornerStyle="capsule">
-                                    <imageReference key="image" image="drop.fill" catalog="system" symbolScale="large"/>
-                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="baseBackgroundColor" red="0.32156862745098036" green="0.55686274509803924" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="waterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgU-Pt-pKT"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="keH-Ww-JIv" userLabel="Goal Bar View">
                                 <rect key="frame" x="0.0" y="321" width="6" height="500"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -97,20 +80,59 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="wSK-gM-Emb">
+                                <rect key="frame" x="138" y="677" width="159" height="107"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YL1-AL-rxW">
+                                        <rect key="frame" x="0.0" y="0.0" width="107" height="107"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="107" id="3KQ-8W-ss6"/>
+                                            <constraint firstAttribute="width" constant="107" id="qYi-OV-y4V"/>
+                                        </constraints>
+                                        <color key="tintColor" systemColor="systemPinkColor"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
+                                            <imageReference key="image" image="drop.fill" catalog="system" symbolScale="large"/>
+                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseBackgroundColor" red="0.32156862745098036" green="0.55686274509803924" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="waterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgU-Pt-pKT"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uox-oh-Yat">
+                                        <rect key="frame" x="114" y="62" width="45" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="afd-PH-nCg"/>
+                                            <constraint firstAttribute="width" constant="45" id="oSS-pI-AJb"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.79125236742424243" green="0.27728315674721243" blue="0.26289975923364944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
+                                            <imageReference key="image" image="arrow.uturn.backward" catalog="system" symbolScale="large" variableValue="0.0"/>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseBackgroundColor" red="0.79125236740000005" green="0.27728315669999998" blue="0.26289975920000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="undoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="813-5Z-gSa"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YL1-AL-rxW" secondAttribute="bottom" constant="11" id="1DM-vX-Xj3"/>
                             <constraint firstItem="MtU-qQ-5ql" firstAttribute="bottom" secondItem="dtE-QR-nhD" secondAttribute="bottom" id="3w8-fX-uD4"/>
                             <constraint firstItem="keH-Ww-JIv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="15" id="5Mc-pF-PK3"/>
                             <constraint firstItem="OE3-yR-tzu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FU-dw-WgK"/>
                             <constraint firstItem="dtE-QR-nhD" firstAttribute="leading" secondItem="HRn-fq-y9J" secondAttribute="trailing" constant="6" id="9hW-gS-qU5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wSK-gM-Emb" secondAttribute="bottom" constant="22" id="C7v-zf-kQc"/>
                             <constraint firstItem="9eO-S5-4f7" firstAttribute="centerX" secondItem="OE3-yR-tzu" secondAttribute="centerX" id="FcW-yC-dZc"/>
                             <constraint firstItem="MtU-qQ-5ql" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KCF-sY-PcQ"/>
                             <constraint firstItem="9eO-S5-4f7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="271" id="MaV-9W-GlY"/>
-                            <constraint firstItem="YL1-AL-rxW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OGM-pl-KlF"/>
                             <constraint firstItem="1kL-Pz-82S" firstAttribute="leading" secondItem="keH-Ww-JIv" secondAttribute="trailing" constant="6" id="XIj-MB-O7K"/>
+                            <constraint firstItem="wSK-gM-Emb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="16.5" id="Xg1-yo-HTb"/>
                             <constraint firstItem="HRn-fq-y9J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jV5-lT-Vak"/>
                             <constraint firstAttribute="bottomMargin" secondItem="HRn-fq-y9J" secondAttribute="bottom" constant="-15" id="k95-Cu-8U9"/>
                             <constraint firstAttribute="trailing" secondItem="MtU-qQ-5ql" secondAttribute="trailing" id="lwA-dG-jHK"/>
@@ -138,6 +160,7 @@
                         <outlet property="percentageLabel" destination="RTp-GE-QKL" id="AjG-PV-hEp"/>
                         <outlet property="percentageSymbolLabel" destination="WAd-Ov-w7t" id="Kh7-mt-dqQ"/>
                         <outlet property="progressBarView" destination="HRn-fq-y9J" id="Jey-en-bLc"/>
+                        <outlet property="undoButton" destination="Uox-oh-Yat" id="3yd-H4-d39"/>
                         <outlet property="waterButton" destination="YL1-AL-rxW" id="RD5-r5-uLi"/>
                         <outlet property="waveView" destination="MtU-qQ-5ql" id="Pwu-Es-d97"/>
                         <outlet property="waveViewHeightConstraint" destination="m0g-Y8-AVe" id="wkY-e0-yod"/>
@@ -231,10 +254,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.uturn.backward" catalog="system" width="128" height="113"/>
         <image name="drop.fill" catalog="system" width="96" height="128"/>
         <image name="gearshape.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
